[workspace]
resolver = "2"

exclude = [
  "examples/tic-tac-toe/cli",
  "examples/regulated-coin/rust-client",
  "examples/custom-indexer/rust",
  "external-crates/move/crates/jsonrpc",
  "external-crates/move/crates/bytecode-interpreter-crypto",
  "external-crates/move/crates/bytecode-verifier-libfuzzer",
  "external-crates/move/crates/bytecode-verifier-tests",
  "external-crates/move/crates/bytecode-verifier-prop-tests",
  "external-crates/move/crates/bytecode-verifier-transactional-tests",
  "external-crates/move/crates/enum-compat-util",
  "external-crates/move/crates/invalid-mutations",
  "external-crates/move/crates/language-benchmarks",
  "external-crates/move/crates/module-generation",
  "external-crates/move/crates/move-abstract-interpreter",
  "external-crates/move/crates/move-abstract-stack",
  "external-crates/move/crates/move-analyzer",
  "external-crates/move/crates/move-binary-format",
  "external-crates/move/crates/move-borrow-graph",
  "external-crates/move/crates/move-bytecode-source-map",
  "external-crates/move/crates/move-bytecode-utils",
  "external-crates/move/crates/move-bytecode-verifier",
  "external-crates/move/crates/move-bytecode-verifier-meter",
  "external-crates/move/crates/move-bytecode-viewer",
  "external-crates/move/crates/move-cli",
  "external-crates/move/crates/move-command-line-common",
  "external-crates/move/crates/move-compiler",
  "external-crates/move/crates/move-compiler-transactional-tests",
  "external-crates/move/crates/move-core-types",
  "external-crates/move/crates/move-coverage",
  "external-crates/move/crates/move-disassembler",
  "external-crates/move/crates/move-docgen",
  "external-crates/move/crates/move-ir-compiler",
  "external-crates/move/crates/move-ir-compiler-transactional-tests",
  "external-crates/move/crates/move-ir-to-bytecode",
  "external-crates/move/crates/move-ir-to-bytecode-syntax",
  "external-crates/move/crates/move-ir-types",
  "external-crates/move/crates/move-model",
  "external-crates/move/crates/move-model-2",
  "external-crates/move/crates/move-package",
  "external-crates/move/crates/move-package-alt",
  "external-crates/move/crates/move-proc-macros",
  "external-crates/move/crates/move-regex-borrow-graph",
  "external-crates/move/crates/move-stackless-bytecode",
  "external-crates/move/crates/move-stackless-bytecode-2",
  "external-crates/move/crates/move-stdlib",
  "external-crates/move/crates/move-stdlib-natives",
  "external-crates/move/crates/move-symbol-pool",
  "external-crates/move/crates/move-transactional-test-runner",
  "external-crates/move/crates/move-trace-format",
  "external-crates/move/crates/move-unit-test",
  "external-crates/move/crates/move-vm-config",
  "external-crates/move/crates/move-vm-integration-tests",
  "external-crates/move/crates/move-vm-profiler",
  "external-crates/move/crates/move-vm-runtime",
  "external-crates/move/crates/move-vm-test-utils",
  "external-crates/move/crates/move-vm-transactional-tests",
  "external-crates/move/crates/move-vm-types",
  "external-crates/move/crates/serializer-tests",
  "external-crates/move/crates/test-generation",
  "external-crates/move/move-execution/v0/crates/move-bytecode-verifier",
  "external-crates/move/move-execution/v0/crates/move-stdlib-natives",
  "external-crates/move/move-execution/v0/crates/move-vm-runtime",
  "external-crates/move/move-execution/v0/crates/move-vm-types",
  "external-crates/move/move-execution/v1/crates/move-bytecode-verifier",
  "external-crates/move/move-execution/v1/crates/move-stdlib-natives",
  "external-crates/move/move-execution/v1/crates/move-vm-runtime",
  "external-crates/move/move-execution/v1/crates/move-vm-types",
  "external-crates/move/move-execution/v2/crates/move-abstract-interpreter",
  "external-crates/move/move-execution/v2/crates/move-bytecode-verifier",
  "external-crates/move/move-execution/v2/crates/move-stdlib-natives",
  "external-crates/move/move-execution/v2/crates/move-vm-runtime",
  "external-crates/move/move-execution/v2/crates/move-vm-types",
]

members = [
  "consensus/config",
  "consensus/core",
  "consensus/simtests",
  "consensus/types",
  "crates/anemo-benchmark",
  "crates/bin-version",
  "crates/mysten-common",
  "crates/mysten-metrics",
  "crates/mysten-network",
  "crates/mysten-service",
  "crates/prometheus-closure-metric",
  "crates/shared-crypto",
  "crates/simulacrum",
  "crates/sui",
  "crates/sui-adapter-transactional-tests",
  "crates/sui-analytics-indexer",
  "crates/sui-analytics-indexer-derive",
  "crates/sui-authority-aggregation",
  "crates/sui-aws-orchestrator",
  "crates/sui-benchmark",
  "crates/sui-bridge",
  "crates/sui-bridge-cli",
  "crates/sui-bridge-indexer",
  "crates/sui-bridge-indexer-alt",
  "crates/sui-bridge-schema",
  "crates/sui-cluster-test",
  "crates/sui-config",
  "crates/sui-core",
  "crates/sui-cost",
  "crates/sui-data-ingestion",
  "crates/sui-data-ingestion-core",
  "crates/sui-deepbook-indexer",
  "crates/sui-default-config",
  "crates/sui-display",
  "crates/sui-e2e-tests",
  "crates/sui-edge-proxy",
  "crates/sui-enum-compat-util",
  "crates/sui-faucet",
  "crates/sui-field-count",
  "crates/sui-field-count-derive",
  "crates/sui-framework",
  "crates/sui-framework-snapshot",
  "crates/sui-framework-tests",
  "crates/sui-genesis-builder",
  "crates/sui-graphql-e2e-tests",
  "crates/sui-graphql-rpc",
  "crates/sui-graphql-rpc-client",
  "crates/sui-graphql-rpc-headers",
  "crates/sui-http",
  "crates/sui-indexer",
  "crates/sui-indexer-alt",
  "crates/sui-indexer-alt-consistent-api",
  "crates/sui-indexer-alt-consistent-store",
  "crates/sui-indexer-alt-e2e-tests",
  "crates/sui-indexer-alt-framework",
  "crates/sui-indexer-alt-framework-store-traits",
  "crates/sui-indexer-alt-graphql",
  "crates/sui-indexer-alt-jsonrpc",
  "crates/sui-indexer-alt-metrics",
  "crates/sui-indexer-alt-reader",
  "crates/sui-indexer-alt-restorer",
  "crates/sui-indexer-alt-schema",
  "crates/sui-indexer-builder",
  "crates/sui-json",
  "crates/sui-json-rpc",
  "crates/sui-json-rpc-api",
  "crates/sui-json-rpc-tests",
  "crates/sui-json-rpc-types",
  "crates/sui-keys",
  "crates/sui-kv-rpc",
  "crates/sui-kvstore",
  "crates/sui-light-client",
  "crates/sui-macros",
  "crates/sui-metric-checker",
  "crates/sui-metrics-push-client",
  "crates/sui-move",
  "crates/sui-move-build",
  "crates/sui-move-lsp",
  "crates/sui-name-service",
  "crates/sui-network",
  "crates/sui-node",
  "crates/sui-open-rpc",
  "crates/sui-open-rpc-macros",
  "crates/sui-oracle",
  "crates/sui-package-alt",
  "crates/sui-package-dump",
  "crates/sui-package-management",
  "crates/sui-package-resolver",
  "crates/sui-pg-db",
  "crates/sui-proc-macros",
  "crates/sui-protocol-config",
  "crates/sui-protocol-config-macros",
  "crates/sui-proxy",
  "crates/sui-replay",
  "crates/sui-replay-2",
  "crates/sui-rosetta",
  "crates/sui-rpc-api",
  "crates/sui-rpc-benchmark",
  "crates/sui-rpc-loadgen",
  "crates/sui-sdk",
  "crates/sui-security-watchdog",
  "crates/sui-simulator",
  "crates/sui-single-node-benchmark",
  "crates/sui-snapshot",
  "crates/sui-source-validation",
  "crates/sui-sql-macro",
  "crates/sui-storage",
  "crates/sui-surfer",
  "crates/sui-swarm",
  "crates/sui-swarm-config",
  "crates/sui-synthetic-ingestion",
  "crates/sui-telemetry",
  "crates/sui-test-transaction-builder",
  "crates/sui-test-validator",
  "crates/sui-tls",
  "crates/sui-tool",
  "crates/sui-transaction-builder",
  "crates/sui-transaction-checks",
  "crates/sui-transactional-test-runner",
  "crates/sui-types",
  "crates/sui-upgrade-compatibility-transactional-tests",
  "crates/sui-verifier-transactional-tests",
  "crates/suins-indexer",
  "crates/telemetry-subscribers",
  "crates/test-cluster",
  "crates/transaction-fuzzer",
  "crates/typed-store",
  "crates/typed-store-derive",
  "crates/typed-store-error",
  "crates/typed-store-workspace-hack",
  "crates/x",
  "sui-execution",
  "sui-execution/cut",
  "sui-execution/latest/sui-adapter",
  "sui-execution/latest/sui-move-natives",
  "sui-execution/latest/sui-verifier",
  "sui-execution/v0/sui-adapter",
  "sui-execution/v0/sui-move-natives",
  "sui-execution/v0/sui-verifier",
  "sui-execution/v1/sui-adapter",
  "sui-execution/v1/sui-move-natives",
  "sui-execution/v1/sui-verifier",
  "sui-execution/v2/sui-adapter",
  "sui-execution/v2/sui-move-natives",
  "sui-execution/v2/sui-verifier",
]

[workspace.package]
# This version string will be inherited by sui-core, sui-faucet, sui-node, sui-tools, sui-sdk, sui-move-build, and sui crates.
version = "1.58.0"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, sui binary size would be > 1GB.
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

# Same as release, but build with lto (~50min build time).
[profile.release-lto]
inherits = "release"
# Enable Link Time Optimization for better runtime performance
lto = true
# Use single codegen unit to enable better optimizations
codegen-units = 1

# Same as release, but build binary with debug symbols (binary size will be ~ 1GB).
[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

[profile.test.package.move-compiler]
# opt-level 2 for move-compiler reduces the size of some of its
# (recursive) stack frames by up to 10x, avoiding stack overflows.
opt-level = 2

[profile.simulator]
inherits = "test"
debug = true
debug-assertions = true
overflow-checks = true
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(msim)',
  'cfg(fail_points)',
] }

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
antithesis_sdk = "0.2.5"
anyhow = "1.0.71"
arrow = "54"
arrow-array = "54"
arc-swap = { version = "1.5.1", features = ["serde"] }
assert_cmd = "2.0.6"
async-graphql = "=7.0.1"
async-graphql-axum = "=7.0.1"
async-graphql-value = "=7.0.1"
async-recursion = "1.0.4"
async-stream = "0.3.6"
async-trait = "0.1.61"
atomic_float = "0.1"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-runtime = "1.5.5"
aws-sdk-dynamodb = "1.65.0"
aws-sdk-ec2 = "1.110.0"
aws-sdk-kms = "1.60.0"
aws-smithy-http = "0.60.12"
aws-smithy-runtime-api = "1.7.3"
axum = { version = "0.8", default-features = false, features = [
  "macros",
  "tokio",
  "http1",
  "http2",
  "json",
  "matched-path",
  "original-uri",
  "form",
  "query",
  "ws",
] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-server = { git = "https://github.com/bmwill/axum-server.git", rev = "f44323e271afdd1365fd0c8b0a4c0bbdf4956cb7", version = "0.6", default-features = false, features = [
  "tls-rustls",
] }
backoff = { version = "0.4.0", features = [
  "futures",
  "futures-core",
  "pin-project-lite",
  "tokio",
  "tokio_1",
] }
backon = "1.4.0"
base64 = "0.21.2"
base64-url = "2"
bcs = "0.1.4"
better_any = "0.1.1"
bimap = "0.6.2"
bincode = "1.3.3"
bip32 = "0.4.0"
byteorder = "1.4.3"
bytes = { version = "1.5.0", features = ["serde"] }
cached = "0.43.0"
camino = "1.1.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.39", features = ["clock", "serde"] }
clap = { version = "4.4", features = ["derive", "wrap_help"] }
codespan-reporting = "0.11.1"
collectable = "0.0.2"
colored = "2.0.0"
color-eyre = "0.6.2"
comfy-table = "6.1.3"
console-subscriber = "0.4.1"
const-str = "0.5.3"
count-min-sketch = "0.1.7"
criterion = { version = "0.5.0", features = [
  "async",
  "async_tokio",
  "html_reports",
] }
crossterm = "0.25.0"
csv = "1.2.1"
cynic = { version = "3.10.0", features = ["http-reqwest"] }
cynic-codegen = "= 3.10.0"
dashmap = "5.5.3"
# datatest-stable = "0.1.2"
datatest-stable = { git = "https://github.com/nextest-rs/datatest-stable.git", rev = "72db7f6d1bbe36a5407e96b9488a581f763e106f" }
derive-syn-parse = "0.1.5"
derive_builder = "0.12.0"
derive_more = "1.0.0"
diesel = "2.2"
diesel_migrations = "2.2"
diesel-async = "0.5"
dirs = "4.0.0"
duration-str = "0.5.0"
ed25519 = { version = "2", features = ["pkcs8", "alloc", "zeroize"] }
ed25519-consensus = { version = "2.0.1", features = ["serde"] }
either = "1.8.0"
petgraph = "0.5.1"
enum_dispatch = "^0.3"
expect-test = "1.4.0"
eyre = "0.6.8"
fdlimit = "0.2.1"
flate2 = "1.0.28"
fs_extra = "1.3.0"
futures = "0.3.28"
futures-core = "0.3.21"
git-version = "0.3.5"
glob = "0.3.1"
governor = "0.6.0"
gcp_auth = "0.12.3"
hashbrown = "0.12"
hdrhistogram = "7.5.1"
headers = "0.4.0"
hex = "0.4.3"
hex-literal = "0.3.4"
http = "1"
http-body = "1"
humantime = "2.1.0"
hyper = "1"
hyper-util = "0.1.6"
hyper-rustls = { version = "0.27", default-features = false, features = [
  "webpki-roots",
  "http1",
  "http2",
  "ring",
  "tls12",
] }
im = "15"
impl-trait-for-tuples = "0.2.0"
indexmap = { version = "2.8.0", features = ["serde"] }
indicatif = "0.17.2"
inquire = "0.6.0"
insta = { version = "1.21.1", features = ["redactions", "yaml", "json"] }
insta-cmd = "0.6.0"
integer-encoding = "3.0.1"
ipnetwork = "0.20.0"
iso8601 = "0.6.3"
itertools = "0.13.0"
tikv-jemalloc-ctl = "^0.5"
tikv-jemallocator = { version = "^0.5", features = [
  "profiling",
  "disable_initial_exec_tls",
] }
jsonrpsee = { version = "0.24.9", features = [
  "server",
  "macros",
  "ws-client",
  "http-client",
  "jsonrpsee-core",
] }
json_to_table = { git = "https://github.com/zhiburt/tabled/", rev = "e449317a1c02eb6b29e409ad6617e5d9eb7b3bd4" }
leb128 = "0.2.5"
lru = "0.10"
match_opt = "0.1.2"
miette = { version = "7", features = ["fancy"] }
mime = "0.3"
mockall = "0.11.4"
moka = { version = "0.12", default-features = false, features = [
  "sync",
  "atomic64",
] }
more-asserts = "0.3.1"
msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "45b88cffa3f50d6f2022d0b422ca4a077ac96a98", package = "msim" }
msim-macros = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "45b88cffa3f50d6f2022d0b422ca4a077ac96a98", package = "msim-macros" }
multiaddr = "0.17.0"
nexlint = { git = "https://github.com/nextest-rs/nexlint.git", rev = "7ce56bd591242a57660ed05f14ca2483c37d895b" }
nexlint-lints = { git = "https://github.com/nextest-rs/nexlint.git", rev = "7ce56bd591242a57660ed05f14ca2483c37d895b" }
nonempty = "0.9.0"
nonzero_ext = "0.3.0"
notify = "6.1.1"
ntest = "0.9.0"
num-bigint = "0.4.4"
num_cpus = "1.15.0"
num_enum = "0.6.1"
object_store = { version = "0.11.2", features = [
  "aws",
  "gcp",
  "azure",
  "http",
] }
once_cell = "1.18.0"
ouroboros = "0.17"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
parquet = "54"
pin-project = "1"
pin-project-lite = "0.2.13"
pkcs8 = { version = "0.10.0", features = ["std"] }
pprof = { version = "0.14.0", features = ["cpp", "frame-pointer"] }
pretty_assertions = "1.3.0"
prettytable-rs = "0.10.0"
proc-macro2 = "1.0.47"
prometheus = "0.13.3"
prometheus-http-query = { version = "0.8", default-features = false, features = [
  "rustls-tls",
] }
prometheus-parse = { git = "https://github.com/asonnino/prometheus-parser.git", rev = "75334db" }
proptest = "1.6.0"
proptest-derive = "0.5"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13.1"
protobuf = { version = "2.28", features = ["with-bytes"] }
quinn-proto = "0.11.7"
quote = "1.0.23"
rand = "0.8.5"
rayon = "1.5.3"
rcgen = "0.13"
regex = "1.7.1"
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "json",
  "rustls-tls",
] }
roaring = "0.10.6"
ron = "0.8.0"
rstest = "0.16.0"
russh = "0.38.0"
russh-keys = "0.38.0"
rust-version = "1.56.1"
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
  "ring",
] }
rustls-pemfile = "2"
rustversion = "1.0.9"
rustyline = "9.1.2"
rustyline-derive = "0.7.0"
schemars = { version = "0.8.21", features = ["either"] }
scoped-futures = "0.1.3"
scopeguard = "1.1"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde-env = "0.2.0"
serde-name = "0.2.1"
serde-reflection = "0.5"
serde_json = { version = "1.0.95", features = ["preserve_order"] }
serde_repr = "0.1"
serde_spanned = "0.6.8"
serde_test = "1.0.147"
serde_with = "3.8"
# serde_yaml = "0.9.21"
serde_yaml = "0.8.26"
shell-words = "1.1.0"
shellexpand = "3.1.0"
signature = "1.6.0"
similar = "2.4.0"
simple_moving_average = "1.0.2"
simple-server-timing-header = "0.1.1"
slip10_ed25519 = "0.1.3"
smallvec = "1.10.0"
snap = "1.1.0"
snowflake-api = "0.11.0"
static_assertions = "1.1.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
syn = { version = "1.0.104", features = ["full", "derive", "extra-traits"] }
# syn = { version = "2", features = ["full", "fold", "extra-traits"] }
synstructure = "0.12"
sysinfo = "0.35.2"
tabled = { version = "0.12" }
tap = "1.0.1"
tar = "0.4.40"
tempfile = "3.20.0"
test-fuzz = "3.0.4"
thiserror = "1.0.40"
tiny-bip39 = "1.0.0"
tokio = "1.46.1"
tokio-retry = "0.3"
tokio-rustls = { version = "0.26", default-features = false, features = [
  "tls12",
  "ring",
] }
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tokio-util = "0.7.10"
toml = { version = "0.7.4", features = ["preserve_order"] }
toml_edit = { version = "0.19.10" }
tonic = { version = "0.13.1", features = [
  "zstd",
  "transport",
  "tls-webpki-roots",
] }
tonic-build = { version = "0.13.1", features = ["prost", "transport"] }
tonic-health = "0.13.1"
tonic-reflection = "0.13.1"
tonic-web = "0.13.1"
tonic-rustls = "0.2.0"
tower = { version = "0.5", features = [
  "full",
  "util",
  "timeout",
  "load-shed",
  "limit",
] }
tower-http = { version = "0.5", features = [
  "cors",
  "full",
  "trace",
  "set-header",
  "propagate-header",
] }
tower-layer = "0.3.2"
twox-hash = "1.6.3"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", default-features = false, features = [
  "std",
  "smallvec",
  "fmt",
  "ansi",
  "time",
  "json",
  "registry",
  "env-filter",
] }
ttl_cache = "0.5.1"
uint = "0.9.4"
unescape = "0.1.0"
ureq = "2.9.1"
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
walkdir = "2.5.0"
webpki = { version = "0.103", package = "rustls-webpki", features = [
  "alloc",
  "std",
  "ring",
] }
winnow = "0.7"
wiremock = "0.5"
x509-parser = { version = "0.17.0", features = ["verify"] }
zstd = "0.12.3"
zeroize = "1.6.0"
versions = "4.1.0"
linked-hash-map = "0.5.6"
shlex = "1.3.0"
starlark = "0.13.0"


# Move dependencies
move-binary-format = { path = "external-crates/move/crates/move-binary-format" }
move-bytecode-utils = { path = "external-crates/move/crates/move-bytecode-utils" }
move-bytecode-source-map = { path = "external-crates/move/crates/move-bytecode-source-map" }
move-bytecode-verifier-meter = { path = "external-crates/move/crates/move-bytecode-verifier-meter" }
move-cli = { path = "external-crates/move/crates/move-cli" }
move-compiler = { path = "external-crates/move/crates/move-compiler" }
move-core-types = { path = "external-crates/move/crates/move-core-types" }
move-disassembler = { path = "external-crates/move/crates/move-disassembler" }
move-package = { path = "external-crates/move/crates/move-package" }
move-package-alt = { path = "external-crates/move/crates/move-package-alt" }
jsonrpc = { path = "external-crates/move/crates/jsonrpc" }
move-unit-test = { path = "external-crates/move/crates/move-unit-test" }
move-vm-config = { path = "external-crates/move/crates/move-vm-config" }
move-vm-test-utils = { path = "external-crates/move/crates/move-vm-test-utils/", features = [
  "tiered-gas",
] }
move-vm-profiler = { path = "external-crates/move/crates/move-vm-profiler" }
move-command-line-common = { path = "external-crates/move/crates/move-command-line-common" }
move-transactional-test-runner = { path = "external-crates/move/crates/move-transactional-test-runner" }
move-ir-types = { path = "external-crates/move/crates/move-ir-types" }
move-stackless-bytecode = { path = "external-crates/move/crates/move-stackless-bytecode" }
move-stackless-bytecode-2 = { path = "external-crates/move/crates/move-stackless-bytecode-2" }
move-symbol-pool = { path = "external-crates/move/crates/move-symbol-pool" }
move-abstract-interpreter = { path = "external-crates/move/crates/move-abstract-interpreter" }
move-abstract-stack = { path = "external-crates/move/crates/move-abstract-stack" }
move-analyzer = { path = "external-crates/move/crates/move-analyzer" }
move-trace-format = { path = "external-crates/move/crates/move-trace-format" }

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b", package = "fastcrypto-zkp" }
fastcrypto-vdf = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b", features = [
  "experimental",
] }
passkey-types = { version = "0.4.0" }
passkey-client = { version = "0.4.0" }
passkey-authenticator = { version = "0.4.0" }
coset = "0.3"
p256 = { version = "0.13.2", features = ["ecdsa"] }

p384 = { version = "0.13.0", default-features = false, features = [
  "ecdsa",
  "sha384",
] }
ciborium = "0.2"

# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "9c52c3c7946532163a79129db15180cdb984bab4" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "9c52c3c7946532163a79129db15180cdb984bab4" }
anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "9c52c3c7946532163a79129db15180cdb984bab4" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "9c52c3c7946532163a79129db15180cdb984bab4" }

# core-types from the new sdk for use in gRPC
sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "8eee97380cac1a1899d3cca427bde7ac906abdb9", features = [ "hash", "serde" ] }
sui-crypto = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "8eee97380cac1a1899d3cca427bde7ac906abdb9", features = [ "ed25519", "secp256r1", "secp256k1", "passkey", "zklogin" ] }
sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "8eee97380cac1a1899d3cca427bde7ac906abdb9" }

### Workspace Members ###
anemo-benchmark = { path = "crates/anemo-benchmark" }
bin-version = { path = "crates/bin-version" }
mysten-common = { path = "crates/mysten-common" }
mysten-metrics = { path = "crates/mysten-metrics" }
mysten-network = { path = "crates/mysten-network" }
mysten-service = { path = "crates/mysten-service" }
prometheus-closure-metric = { path = "crates/prometheus-closure-metric" }
shared-crypto = { path = "crates/shared-crypto" }
simulacrum = { path = "crates/simulacrum" }
sui = { path = "crates/sui" }
sui-adapter-transactional-tests = { path = "crates/sui-adapter-transactional-tests" }
sui-analytics-indexer = { path = "crates/sui-analytics-indexer" }
sui-analytics-indexer-derive = { path = "crates/sui-analytics-indexer-derive" }
sui-authority-aggregation = { path = "crates/sui-authority-aggregation" }
sui-benchmark = { path = "crates/sui-benchmark" }
sui-bridge = { path = "crates/sui-bridge" }
sui-bridge-schema = { path = "crates/sui-bridge-schema" }
sui-cluster-test = { path = "crates/sui-cluster-test" }
sui-config = { path = "crates/sui-config" }
sui-core = { path = "crates/sui-core" }
sui-cost = { path = "crates/sui-cost" }
sui-data-ingestion = { path = "crates/sui-data-ingestion" }
sui-data-ingestion-core = { path = "crates/sui-data-ingestion-core" }
sui-default-config = { path = "crates/sui-default-config" }
sui-display = { path = "crates/sui-display" }
sui-e2e-tests = { path = "crates/sui-e2e-tests" }
sui-enum-compat-util = { path = "crates/sui-enum-compat-util" }
sui-faucet = { path = "crates/sui-faucet" }
sui-field-count = { path = "crates/sui-field-count" }
sui-field-count-derive = { path = "crates/sui-field-count-derive" }
sui-framework = { path = "crates/sui-framework" }
sui-framework-snapshot = { path = "crates/sui-framework-snapshot" }
sui-framework-tests = { path = "crates/sui-framework-tests" }
sui-graphql-rpc = { path = "crates/sui-graphql-rpc" }
sui-graphql-rpc-client = { path = "crates/sui-graphql-rpc-client" }
sui-graphql-rpc-headers = { path = "crates/sui-graphql-rpc-headers" }
sui-genesis-builder = { path = "crates/sui-genesis-builder" }
sui-http = { path = "crates/sui-http" }
sui-indexer = { path = "crates/sui-indexer" }
sui-indexer-alt = { path = "crates/sui-indexer-alt" }
sui-indexer-alt-consistent-api = { path = "crates/sui-indexer-alt-consistent-api" }
sui-indexer-alt-consistent-store = { path = "crates/sui-indexer-alt-consistent-store" }
sui-indexer-alt-framework = { path = "crates/sui-indexer-alt-framework", default-features = false }
sui-indexer-alt-framework-store-traits = { path = "crates/sui-indexer-alt-framework-store-traits" }
sui-indexer-alt-graphql = { path = "crates/sui-indexer-alt-graphql" }
sui-indexer-alt-jsonrpc = { path = "crates/sui-indexer-alt-jsonrpc" }
sui-indexer-alt-metrics = { path = "crates/sui-indexer-alt-metrics" }
sui-indexer-alt-reader = { path = "crates/sui-indexer-alt-reader" }
sui-indexer-alt-restorer = { path = "crates/sui-indexer-alt-restorer" }
sui-indexer-alt-schema = { path = "crates/sui-indexer-alt-schema" }
sui-indexer-builder = { path = "crates/sui-indexer-builder" }
sui-json = { path = "crates/sui-json" }
sui-json-rpc = { path = "crates/sui-json-rpc" }
sui-json-rpc-api = { path = "crates/sui-json-rpc-api" }
sui-json-rpc-types = { path = "crates/sui-json-rpc-types" }
sui-keys = { path = "crates/sui-keys" }
sui-kvstore = { path = "crates/sui-kvstore" }
sui-kv-rpc = { path = "crates/sui-kv-rpc" }
sui-macros = { path = "crates/sui-macros" }
sui-metric-checker = { path = "crates/sui-metric-checker" }
sui-metrics-push-client = { path = "crates/sui-metrics-push-client" }
sui-move = { path = "crates/sui-move" }
sui-move-build = { path = "crates/sui-move-build" }
sui-move-lsp = { path = "crates/sui-move-lsp" }
sui-name-service = { path = "crates/sui-name-service" }
sui-network = { path = "crates/sui-network" }
sui-node = { path = "crates/sui-node" }
sui-open-rpc = { path = "crates/sui-open-rpc" }
sui-open-rpc-macros = { path = "crates/sui-open-rpc-macros" }
sui-package-dump = { path = "crates/sui-package-dump" }
sui-package-management = { path = "crates/sui-package-management" }
sui-package-resolver = { path = "crates/sui-package-resolver" }
sui-pg-db = { path = "crates/sui-pg-db" }
sui-proc-macros = { path = "crates/sui-proc-macros" }
sui-protocol-config = { path = "crates/sui-protocol-config" }
sui-protocol-config-macros = { path = "crates/sui-protocol-config-macros" }
sui-proxy = { path = "crates/sui-proxy" }
sui-replay = { path = "crates/sui-replay" }
sui-replay-2 = { path = "crates/sui-replay-2" }
sui-rosetta = { path = "crates/sui-rosetta" }
sui-rpc-loadgen = { path = "crates/sui-rpc-loadgen" }
sui-sdk = { path = "crates/sui-sdk" }
sui-simulator = { path = "crates/sui-simulator" }
sui-snapshot = { path = "crates/sui-snapshot" }
sui-source-validation = { path = "crates/sui-source-validation" }
sui-sql-macro = { path = "crates/sui-sql-macro" }
sui-storage = { path = "crates/sui-storage" }
sui-surfer = { path = "crates/sui-surfer" }
sui-swarm = { path = "crates/sui-swarm" }
sui-swarm-config = { path = "crates/sui-swarm-config" }
sui-synthetic-ingestion = { path = "crates/sui-synthetic-ingestion" }
sui-telemetry = { path = "crates/sui-telemetry" }
sui-test-transaction-builder = { path = "crates/sui-test-transaction-builder" }
sui-test-validator = { path = "crates/sui-test-validator" }
sui-tls = { path = "crates/sui-tls" }
sui-rpc-api = { path = "crates/sui-rpc-api" }
sui-tool = { path = "crates/sui-tool" }
sui-transaction-builder = { path = "crates/sui-transaction-builder" }
sui-transaction-checks = { path = "crates/sui-transaction-checks" }
sui-transactional-test-runner = { path = "crates/sui-transactional-test-runner" }
sui-types = { path = "crates/sui-types" }
sui-upgrade-compatibility-transactional-tests = { path = "crates/sui-upgrade-compatibility-transactional-tests" }
sui-verifier-transactional-tests = { path = "crates/sui-verifier-transactional-tests" }
telemetry-subscribers = { path = "crates/telemetry-subscribers" }
test-cluster = { path = "crates/test-cluster" }
transaction-fuzzer = { path = "crates/transaction-fuzzer" }
typed-store = { path = "crates/typed-store" }
typed-store-error = { path = "crates/typed-store-error" }
x = { path = "crates/x" }

consensus-config = { path = "consensus/config" }
consensus-core = { path = "consensus/core" }
consensus-types = { path = "consensus/types" }
consensus-simtests = { path = "consensus/simtests" }

sui-execution = { path = "sui-execution" }
# sui-move-natives = { path = "sui-execution/latest/sui-move-natives", package = "sui-move-natives-latest" }
# sui-adapter = { path = "sui-execution/latest/sui-adapter", package = "sui-adapter-latest" }
# sui-verifier = { path = "sui-execution/latest/sui-verifier", package = "sui-verifier-latest" }
# move-stdlib = { path = "external-crates/move/move-stdlib" }
# move-vm-runtime = { path = "external-crates/move/move-vm/runtime" }
# move-bytecode-verifier = { path = "external-crates/move/move-bytecode-verifier" }

[patch.crates-io]
async-graphql = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
async-graphql-axum = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
async-graphql-value = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
