[package]
name = "fastpay"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.52"
bytes = "1.1.0"
clap = "2"
env_logger = "0.9.0"
futures = "0.3.5"
log = "0.4.14"
net2 = "0.2.37"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
structopt = "0.3.25"
tempfile = "3.3.0"
tokio = { version = "1.15.0", features = ["full"] }
rand = "0.8.4"
toml = "0.5.8"
strum = "0.23.0"
strum_macros = "0.23.1"
num_cpus = "1.13.1"
base64 = "0.13.0"
ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
rocksdb = "0.17.0"

bcs = "0.1.3"
fastpay_core = { path = "../fastpay_core" }
fastx-adapter = { path = "../fastx_programmability/adapter" }
fastx-types = { path = "../fastx_types" }

move-package = { git = "https://github.com/diem/move", rev="98ed299a7e3a9223019c9bdf4dd92fea9faef860" }
move-core-types = { git = "https://github.com/diem/move", rev="98ed299a7e3a9223019c9bdf4dd92fea9faef860" }
move-bytecode-verifier = { git = "https://github.com/diem/move", rev="98ed299a7e3a9223019c9bdf4dd92fea9faef860" }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"
