[package]
name = "fastpay_core"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
rocksdb = "0.17.0"
anyhow = "1.0.52"
bcs = "0.1.3"
futures = "0.3.5"
rand = "0.7.3"
serde = { version = "1.0.133", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
parking_lot = "0.11.2"
itertools = "0.10.3"
async-trait = "0.1.52"
tempfile = "3.3.0"

fastx-adapter = { path = "../fastx_programmability/adapter" }
fastx-framework = { path = "../fastx_programmability/framework" }
fastx-types = { path = "../fastx_types" }

move-binary-format = { git = "https://github.com/diem/move", rev="62b5a5075378ae6a7102bbfc1fb33b57ba6125d2" }
move-core-types = { git = "https://github.com/diem/move", rev="62b5a5075378ae6a7102bbfc1fb33b57ba6125d2", features=["address20"] }
move-package = { git = "https://github.com/diem/move", rev="62b5a5075378ae6a7102bbfc1fb33b57ba6125d2" }
move-vm-runtime = { git = "https://github.com/diem/move", rev="62b5a5075378ae6a7102bbfc1fb33b57ba6125d2" }


typed-store = { git = "https://github.com/MystenLabs/mysten-infra", rev = "2e829074f40c9ef852ecd6808b80d083174c778b" }

[dev-dependencies]
fdlimit = "0.2.1"
naughty-strings = "0.2.4"
