[package]
name = "fastpay_core"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
rocksdb = "0.17.0"
anyhow = "1.0.53"
bcs = "0.1.3"
futures = "0.3.19"
rand = "0.7.3"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
parking_lot = "0.12.0"
itertools = "0.10.3"
async-trait = "0.1.52"
tempfile = "3.3.0"
tracing = { version = "0.1", features = ["log"] }

fastx-adapter = { path = "../fastx_programmability/adapter" }
fastx-framework = { path = "../fastx_programmability/framework" }
fastx-network = { path = "../network_utils" }
fastx-types = { path = "../fastx_types" }

move-binary-format = { git = "https://github.com/diem/move", rev="62b5a5075378ae6a7102bbfc1fb33b57ba6125d2" }
move-core-types = { git = "https://github.com/diem/move", rev="62b5a5075378ae6a7102bbfc1fb33b57ba6125d2", features=["address20"] }
move-package = { git = "https://github.com/diem/move", rev="62b5a5075378ae6a7102bbfc1fb33b57ba6125d2" }
move-vm-runtime = { git = "https://github.com/diem/move", rev="62b5a5075378ae6a7102bbfc1fb33b57ba6125d2" }


typed-store = { git = "https://github.com/MystenLabs/mysten-infra", rev = "d04c29e686aba380e6f9fc0c60a2dfdb974c5f8a"}

[dev-dependencies]
fdlimit = "0.2.1"
naughty-strings = "0.2.4"
