[package]
name = "fastx-types"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.52"
base64 = "0.13.0"
bcs = "0.1.3"
bincode = "1.3.3"
rand = "0.7.3"
serde = { version = "1.0.133", features = ["derive"] }
ed25519 = "1.3.0"
ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
serde-name = "0.2.0"
sha3 = "0.9"
thiserror = "1.0.30"
hex = "0.4.3"
serde_bytes = "0.11.5"
serde_with = "1.11.0"

typed-store = { git = "https://github.com/MystenLabs/mysten-infra", rev = "2e829074f40c9ef852ecd6808b80d083174c778b" }

move-binary-format = { git = "https://github.com/diem/move", rev="d253bf1c21314679d17e6935116f30baf409f264" }
move-core-types = { git = "https://github.com/diem/move", rev="d253bf1c21314679d17e6935116f30baf409f264" }
