[package]
name = "fastx-types"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.53"
base64 = "0.13.0"
bcs = "0.1.3"
bincode = "1.3.3"
rand = "0.7.3"
serde = { version = "1.0.136", features = ["derive"] }
ed25519 = "1.3.0"
ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
serde-name = "0.2.0"
sha3 = "0.9"
thiserror = "1.0.30"
hex = "0.4.3"
serde_bytes = "0.11.5"
serde_with = "1.11.0"
static_assertions = "1.1.0"

typed-store = { git = "https://github.com/MystenLabs/mysten-infra", rev ="5221b8ff87e18a1bff2ffe930711685d54c04062"}

move-binary-format = { git = "https://github.com/diem/move", rev="62b5a5075378ae6a7102bbfc1fb33b57ba6125d2" }
move-core-types = { git = "https://github.com/diem/move", rev="62b5a5075378ae6a7102bbfc1fb33b57ba6125d2", features=["address20"] }
