[package]
name = "sui-faucet"
version = "0.1.0"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
async-trait = "0.1.52"
axum = { version = "0.5.3" }
clap = { version = "3.1.8", features = ["derive"] }
futures = "0.3.21"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tracing = { version = "0.1.31", features = ["log"] }
tracing-subscriber = { version = "0.3.9", features = ["time", "registry", "env-filter"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }

sui = { path = "../sui" }
sui-types = { path = "../sui_types" }

[dev-dependencies]
tempfile = "3.3.0"

[[bin]]
name = "sui-faucet"
path = "src/main.rs"
