[workspace]
members = [
    "crates/component",
    "crates/mysten-network",
    "crates/name-variant",
    "crates/rccheck",
    "crates/telemetry-subscribers",
    "crates/typed-store",
    "crates/typed-store-macros",
    "crates/typed-store-macros-tests",
    "crates/x",
]

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true
