[workspace]
members = [
    "crates/component",
    "crates/mysten-network",
    "crates/name-variant",
    "crates/parity-util-mem",
    "crates/parity-util-mem-derive",
    "crates/rccheck",
    "crates/telemetry-subscribers",
    "crates/typed-store",
    "crates/typed-store-derive",
    "crates/x",
]

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true
