[workspace]
members = [
    "crates/component",
    "crates/mysten-network",
    "crates/mysten-util-mem",
    "crates/mysten-util-mem-derive",
    "crates/name-variant",
    "crates/rccheck",
    "crates/telemetry-subscribers",
    "crates/typed-store",
    "crates/typed-store-derive",
    "crates/x",
]

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true
