[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
tokio = { version = "1.15.0", features = ["rt", "sync", "macros", "net", "time"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
thiserror = "1.0.30"
futures = "0.3.19"
bytes = "1.1.0"
async-trait = "0.1.52"

[dev-dependencies]
bincode = "1.3.3"