[package]
name = "sui-network"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
bytes = "1.1.0"
futures = "0.3.21"
async-trait = "0.1.53"
tokio = { version = "1.17.0", features = ["full"] }
tracing = { version = "0.1.34", features = ["log"] }
tokio-util = { version = "0.7.1", features = ["codec"] }

sui-types = { path = "../sui_types" }


[package.metadata.cargo-udeps.ignore]
normal = ["net2"]
