[package]
name = "sui-execution"
version = "0.1.0"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Multiplexer to choose between multiple versions of sui and move execution crates."
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
sui-protocol-config.workspace = true
sui-types.workspace = true

move-binary-format.workspace = true
move-vm-config.workspace = true

sui-adapter-latest = { path = "latest/sui-adapter" }
sui-adapter-v0 = { path = "v0/sui-adapter" }
sui-adapter-v1 = { path = "v1/sui-adapter" }
sui-adapter-next-vm = { path = "next-vm/sui-adapter" }
# sui-adapter-$CUT = { path = "$CUT/sui-adapter" }
sui-move-natives-latest = { path = "latest/sui-move-natives" }
sui-move-natives-v0 = { path = "v0/sui-move-natives" }
sui-move-natives-v1 = { path = "v1/sui-move-natives" }
sui-move-natives-next-vm = { path = "next-vm/sui-move-natives" }
# sui-move-natives-$CUT = { path = "$CUT/sui-move-natives" }
sui-verifier-latest = { path = "latest/sui-verifier" }
sui-verifier-v0 = { path = "v0/sui-verifier" }
sui-verifier-v1 = { path = "v1/sui-verifier" }
sui-verifier-next-vm = { path = "next-vm/sui-verifier" }
# sui-verifier-$CUT = { path = "$CUT/sui-verifier" }

move-bytecode-verifier-latest = { path = "../external-crates/move/crates/move-bytecode-verifier", package = "move-bytecode-verifier" }
move-bytecode-verifier-v0 = { path = "../external-crates/move/move-execution/v0/move-bytecode-verifier" }
move-bytecode-verifier-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-bytecode-verifier" }
move-bytecode-verifier-next-vm = { path = "../external-crates/move/move-execution/next-vm/crates/move-bytecode-verifier" }
# move-bytecode-verifier-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-bytecode-verifier" }
move-vm-runtime-latest = { path = "../external-crates/move/crates/move-vm-runtime", package = "move-vm-runtime" }
move-vm-runtime-v0 = { path = "../external-crates/move/move-execution/v0/move-vm/runtime" }
move-vm-runtime-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-vm-runtime" }
move-vm-runtime-next-vm = { path = "../external-crates/move/move-execution/next-vm/crates/move-vm-runtime" }
# move-vm-runtime-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-vm-runtime" }
workspace-hack.workspace = true

[dev-dependencies]
cargo_metadata = "0.15.4"
petgraph = "0.5.1"

[features]
default = []
gas-profiler = [
    "sui-adapter-latest/gas-profiler",
    "sui-adapter-v0/gas-profiler",
    "sui-adapter-v1/gas-profiler",
    "move-vm-runtime-next-vm/gas-profiler",
    "move-vm-runtime-v0/gas-profiler",
    "move-vm-runtime-v1/gas-profiler",
    "move-vm-runtime-latest/gas-profiler",
    "move-vm-config/gas-profiler",
]
